Trivial fix: css style compatible for older version IE; check the consistency of pwd; news alignment to left.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -163,6 +163,14 @@ table.data1 th {
     font-size: 12px;
     line-height: 22px;
     text-indent: 24px;
+    text-align: left;
+}
+
+iframe {
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+    border-color: #ffffff;
 }
 
 
